force-app/main/default/objects/Em_rota_Pedidos__c/Em_rota_Pedidos__c.object-meta.xml
<CustomObject>
    <label>Em rota - Notas</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Nº</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Em rotas - Notas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>