force-app/main/default/objects/Em_rota_Pedidos__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <formula>Nota_Fiscal__r.Nome_da_Conta2__r.Raz_o_Social__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cliente</label>
    <type>Text</type>
</CustomField>