force-app/main/default/objects/Em_rota_Pedidos__c/fields/Data_de_sa_da__c.field-meta.xml
<CustomField>
    <fullName>Data_de_sa_da__c</fullName>
    <formula>Rota_de_Viagem__r.Data_de_saida__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de saída</label>
    <type>DateTime</type>
</CustomField>