force-app/main/default/objects/Em_rota_Pedidos__c/fields/Destino__c.field-meta.xml
<CustomField>
    <fullName>Destino__c</fullName>
    <formula>Rota_de_Viagem__r.Destino__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destino</label>
    <type>Text</type>
</CustomField>