force-app/main/default/objects/Em_rota_Pedidos__c/fields/Nota_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Nota_Fiscal__c</fullName>
    <label>Nota Fiscal</label>
    <referenceTo>Faturamento__c</referenceTo>
    <relationshipName>Em_rotas_Pedidos</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>