force-app/main/default/objects/Em_rota_Pedidos__c/fields/Origem__c.field-meta.xml
<CustomField>
    <fullName>Origem__c</fullName>
    <formula>Rota_de_Viagem__r.Origem__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origem</label>
    <type>Text</type>
</CustomField>