force-app/main/default/objects/Em_rota_Pedidos__c/fields/Responsavel__c.field-meta.xml
<CustomField>
    <fullName>Responsavel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsável</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Em rotas - Notas</relationshipLabel>
    <relationshipName>Em_rotas_Notas</relationshipName>
    <type>Lookup</type>
</CustomField>