force-app/main/default/objects/Em_rota_Pedidos__c/fields/Ve_culo__c.field-meta.xml
<CustomField>
    <fullName>Ve_culo__c</fullName>
    <formula>TEXT(Rota_de_Viagem__r.Veiculo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Veículo</label>
    <type>Text</type>
</CustomField>